--- a/rules/config
+++ b/rules/config
@@ -154,3 +154,9 @@ K8s_GCR_IO_PAUSE_VERSION = 3.2
 #     CA_CERT =
 # The relative path is build root folder.
 SONIC_ENABLE_IMAGE_SIGNATURE ?= n
+
+# PACKAGE_URL_PREFIX - the package url prefix
+PACKAGE_URL_PREFIX ?= https://sonicstorage.blob.core.windows.net/public/
+
+# SONIC_ENFORCE_VERSIONS - Enforce the versions of Debian packages, Pypi packages, Web packages to install when installing docker/host images
+SONIC_ENFORCE_VERSIONS ?= y
