--- a/Makefile.work
+++ b/Makefile.work
@@ -174,7 +174,8 @@ DOCKER_BASE_BUILD = docker build --no-cache \
 		    -t $(SLAVE_BASE_IMAGE):$(SLAVE_BASE_TAG) \
 		    --build-arg http_proxy=$(http_proxy) \
 		    --build-arg https_proxy=$(https_proxy) \
-		    $(SLAVE_DIR)
+		    $(SLAVE_DIR); \
+		    scripts/collect_docker_version_files.sh $(SLAVE_BASE_IMAGE):$(SLAVE_BASE_TAG) target
 
 DOCKER_BUILD = docker build --no-cache \
 	       --build-arg user=$(USER) \
