--- a/rules/config
+++ b/rules/config
@@ -162,8 +162,11 @@ SONIC_ENABLE_IMAGE_SIGNATURE ?= n
 # PACKAGE_URL_PREFIX - the package url prefix
 PACKAGE_URL_PREFIX ?= https://packages.trafficmanager.net/public
 
-# TRUSTED_GPG_URLS - the trusted gpgs, separate by comma
+# TRUSTED_GPG_URLS - the trusted gpgs, separated by comma
 TRUSTED_GPG_URLS = https://packages.trafficmanager.net/debian/public_key.gpg,https://packages.microsoft.com/keys/microsoft.asc
 
-# SONIC_ENFORCE_VERSIONS - Enforce the versions of Debian packages, Pypi packages, Web packages to install when installing docker/host images
-SONIC_ENFORCE_VERSIONS ?= n
+# SONIC_ENABLE_VERSION_CONTROL - Enable the version control for Debian packages, Pypi packages, Web packages to install when installing docker/host images
+SONIC_ENABLE_VERSION_CONTROL ?= y
+
+# SONIC_VERSION_CONTROL_COMPONENTS - Valid values: deb/py2/py3/web/git/all, seperated by comma
+SONIC_VERSION_CONTROL_COMPONENTS ?= all
