--- a/rules/config
+++ b/rules/config
@@ -160,7 +160,7 @@ K8s_GCR_IO_PAUSE_VERSION = 3.2
 SONIC_ENABLE_IMAGE_SIGNATURE ?= n
 
 # PACKAGE_URL_PREFIX - the package url prefix
-PACKAGE_URL_PREFIX ?= https://packages.trafficmanager.net/public
+PACKAGE_URL_PREFIX ?= https://packages.trafficmanager.net/public/packages
 
 # TRUSTED_GPG_URLS - the trusted gpgs, separated by comma
 TRUSTED_GPG_URLS = https://packages.trafficmanager.net/debian/public_key.gpg,https://packages.microsoft.com/keys/microsoft.asc
