Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     if [ ! -e /dev/sdc1 ]; then
       echo 'Run parted disk /dev/sdc'
       sudo parted /dev/sdc --script mklabel gpt mkpart data ext4 0% 100%
-      sudo partprobe /dev/sdc1
+      sleep 10
       sudo mkfs.ext4 /dev/sdc1
       sudo partprobe /dev/sdc1
     fi
