--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,15 +23,17 @@ steps:
     fi
     # Mount data disk
     if ! grep data /etc/fstab; then
-      echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab
-      mount -a
+      sudo echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab
+      sudo mount -a
     fi
     # Mount nfs
     [ ! -d /nfs ] && sudo mkdir -p /nfs
     if ! grep jenkins-vol-1 /etc/fstab; then
-      echo 'Run Install nfs-common and mount jenkins-vol-1'
+      echo 'Run Install nfs-common'
       sudo apt-get install nfs-common
+      echo 'Run add jenkins-vol-1 to /etc/fstab'
       sudo echo "10.0.5.4:/jenkins-vol-1 /nfs nfs sec=sys,vers=4.1 0 0" >> /etc/fstab
+      echo 'Run mount all'
       sudo mount -a
     fi
   displayName: 'Run init script'
