Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     fi
     # Mount data disk
     if ! grep data /etc/fstab; then
-      sudo echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab
+      sudo sh -c 'echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab'
       sudo mount -a
     fi
     # Mount nfs
@@ -32,7 +32,7 @@ steps:
       echo 'Run Install nfs-common'
       sudo apt-get install nfs-common
       echo 'Run add jenkins-vol-1 to /etc/fstab'
-      sudo echo "10.0.5.4:/jenkins-vol-1 /nfs nfs sec=sys,vers=4.1 0 0" >> /etc/fstab
+      sudo sh -c 'echo "10.0.5.4:/jenkins-vol-1 /nfs nfs sec=sys,vers=4.1 0 0" >> /etc/fstab'
       echo 'Run mount all'
       sudo mount -a
     fi
