--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,12 @@ steps:
       sudo mount -a
     fi
     # Install blobfuse
-    ! dpkg -s blobfuse 1>/dev/null 2>&1 && sudo apt-get install -y blobfuse
+    if ! dpkg -s blobfuse 1>/dev/null 2>&1; then
+      wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
+      sudo dpkg -i packages-microsoft-prod.deb
+      sudo apt-get update
+      sudo apt-get install -y blobfuse
+    fi
     if ! mount | grep -q /blobfuse-sonicstoragepublic-web; then
       sudo mkdir mkdir -p /blobfuse-sonicstoragepublic-web
       sudo apt-get install -y blobfuse
