--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,8 @@ steps:
       sudo mkdir -p /blobfuse-sonicstoragepublic-web
       export AZURE_STORAGE_ACCOUNT=$(StorageAccount)
       export AZURE_STORAGE_SAS_TOKEN=$(sonicstoragepublic-SasToken)
+      echo $AZURE_STORAGE_ACCOUNT
+      echo $AZURE_STORAGE_SAS_TOKEN
       sudo -E blobfuse /blobfuse-sonicstoragepublic-web --container-name=$(StorageAccountContainerWeb) --tmp-path=/data/blobfusetmp
     fi
   displayName: 'Run init script'
