--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ steps:
       export AZURE_STORAGE_ACCOUNT=$(StorageAccount)
       export AZURE_STORAGE_SAS_TOKEN=$(sonicstoragepublic-SasToken)
       echo $AZURE_STORAGE_ACCOUNT
-      echo AZURE_STORAGE_SAS_TOKEN=$AZURE_STORAGE_SAS_TOKEN
+      echo AZURE_STORAGE_SAS_TOKEN=$(sonicstoragepublic-SasToken)
       sudo -E blobfuse /blobfuse-sonicstoragepublic-web --container-name=$(StorageAccountContainerWeb) --tmp-path=/data/blobfusetmp
     fi
   displayName: 'Run init script'
