Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,9 +45,9 @@ steps:
     if ! mount | grep -q /blobfuse-sonicstoragepublic-web; then
       sudo mkdir -p /blobfuse-sonicstoragepublic-web
       export AZURE_STORAGE_ACCOUNT=$(StorageAccount)
-      export AZURE_STORAGE_SAS_TOKEN=$(sonicstoragepublic-SasToken)
+      export AZURE_STORAGE_SAS_TOKEN="$(sonicstoragepublic-SasToken)"
       echo $AZURE_STORAGE_ACCOUNT
-      echo AZURE_STORAGE_SAS_TOKEN=$(sonicstoragepublic-SasToken)
+      echo AZURE_STORAGE_SAS_TOKEN="$(sonicstoragepublic-SasToken)"
       sudo -E blobfuse /blobfuse-sonicstoragepublic-web --container-name=$(StorageAccountContainerWeb) --tmp-path=/data/blobfusetmp
     fi
   displayName: 'Run init script'
