--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,19 +42,17 @@ steps:
       sudo apt-get update
       sudo apt-get install -y blobfuse
     fi
-    if ! mount | grep -q /blobfuse-sonicstoragepublic-web; then
-      sudo mkdir -p /blobfuse-sonicstoragepublic-web
+    # Mount storage containers for debian mirrors
+    if ! mount | grep -q /blobfuse-web; then
+      sudo mkdir -p /blobfuse-web /blobfuse-aptly
       export AZURE_STORAGE_ACCOUNT=$(StorageAccount)
       export AZURE_STORAGE_SAS_TOKEN="$(sonicstoragepublic-SasToken)"
-      echo $AZURE_STORAGE_ACCOUNT
-      echo AZURE_STORAGE_SAS_TOKEN="$(sonicstoragepublic-SasToken)"
-      echo ContainerWeb='$web'
-      sudo -E blobfuse /blobfuse-sonicstoragepublic-web --container-name='$web' --tmp-path=/data/blobfusetmp
+      sudo -E blobfuse /blobfuse-web --container-name='$web' --tmp-path=/data/blobfuse-web
+      sudo -E blobfuse /blobfuse-aptly --container-name='aptly' --tmp-path=/data/blobfuse-aptly
     fi
   displayName: 'Run init script'
 - bash: |
-    export AZURE_STORAGE_ACCOUNT=$(StorageAccount)
-    export AZURE_STORAGE_SAS_TOKEN="$(sonicstoragepublic-SasToken)"
+    echo test
   displayName: 'Run blobfuse'
 - task: AzureKeyVault@1
   inputs:
