Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,7 @@ steps:
       export AZURE_STORAGE_ACCOUNT="$(StorageAccount)"
       export AZURE_STORAGE_SAS_TOKEN="$(StorageAccountSasToken)"
       echo "AZURE_STORAGE_ACCOUNT=$AZURE_STORAGE_ACCOUNT"
-      echo "AZURE_STORAGE_SAS_TOKEN=$StorageAccountSasToken"
+      echo "AZURE_STORAGE_SAS_TOKEN=$AZURE_STORAGE_SAS_TOKEN"
       sudo -E blobfuse /blobfuse-$(StorageAccount)-web --container-name='$web' --tmp-path=/data/blobfuse-$(StorageAccount)-web -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
       sudo -E blobfuse /blobfuse-$(StorageAccount)-aptly --container-name='aptly' --tmp-path=/data/blobfuse-$(StorageAccount)-aptly -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
     fi
