--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,14 @@ steps:
       sudo chmod a+rx /blobfuse-$(StorageAccount)-web /blobfuse-$(StorageAccount)-aptly
       export AZURE_STORAGE_ACCOUNT="$(StorageAccount)"
       #export AZURE_STORAGE_SAS_TOKEN="$($(StorageAccountSasToken))"
-      export AZURE_STORAGE_SAS_TOKEN=$[ variables[variables['StorageAccountSasToken']] ]
+      export AZURE_STORAGE_SAS_TOKEN=$MY_MAPPED_ENV_VAR
       echo "AZURE_STORAGE_ACCOUNT=$AZURE_STORAGE_ACCOUNT"
       echo "AZURE_STORAGE_SAS_TOKEN=$AZURE_STORAGE_SAS_TOKEN"
       sudo -E blobfuse /blobfuse-$(StorageAccount)-web --container-name='$web' --tmp-path=/data/blobfuse-$(StorageAccount)-web -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
       sudo -E blobfuse /blobfuse-$(StorageAccount)-aptly --container-name='aptly' --tmp-path=/data/blobfuse-$(StorageAccount)-aptly -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
     fi
+  env:
+    MY_MAPPED_ENV_VAR=$[ variables[variables['StorageAccountSasToken']] ]
   displayName: 'Run init script'
 - bash: |
     #scripts/mirror/aptly.sh $(StorageAccount) 'buster'
