--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ steps:
       sudo -E blobfuse /blobfuse-$(StorageAccount)-aptly --container-name='aptly' --tmp-path=/data/blobfuse-$(StorageAccount)-aptly -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
     fi
   env:
-    MY_MAPPED_ENV_VAR: $[ variables[variables['StorageAccountSasToken']] ]
+    MY_MAPPED_ENV_VAR: $[ variables['StorageAccountSasToken'] ]
   displayName: 'Run init script'
 - bash: |
     #scripts/mirror/aptly.sh $(StorageAccount) 'buster'
