Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
     fi
   displayName: 'Run init script'
 - bash: |
-    #scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)"
+    scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)"
   displayName: 'Update and publish debian mirrors by aptly'
 
 - script: |
